hphp/hack/test/typecheck/reactive/mayberx15.php.like_types.exp
File "mayberx15.php", line 10, characters 12-15:
Reactive functions can only call other reactive functions. (Typing[4200])
File "mayberx15.php", line 9, characters 41-57:
This function is normal.
File "mayberx15.php", line 20, characters 3-66:
Reactive functions can only call other reactive functions. (Typing[4200])
File "mayberx15.php", line 9, characters 19-19:
This function is normal.
File "mayberx15.php", line 20, characters 16-65:
This argument caused function to be normal.
